fix overflow images

--- a/main.less
+++ b/main.less
@@ -146,6 +146,7 @@ img.figure {
 	}
 	.modal-body {
 		min-height: 500px;
+		overflow-x: hidden;
 	}
 }
 
